--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ java {
     targetCompatibility = JavaVersion.VERSION_17
 }
 
-def ROBOT_MAIN_CLASS = "org.frc5687.swerret.Main"
+def ROBOT_MAIN_CLASS = "org.frc5687.robot.Main"
 
 // Define my targets (RoboRIO) and artifacts (deployable files)
 // This is added by GradleRIO's backing project DeployUtils.
