--- a/.pathplanner/settings.json
+++ b/.pathplanner/settings.json
@@ -2,7 +2,10 @@
   "robotWidth": 0.86,
   "robotLength": 0.9144,
   "holonomicMode": true,
-  "pathFolders": [],
+  "pathFolders": [
+    "Node end",
+    "Node Start"
+  ],
   "autoFolders": [],
   "defaultMaxVel": 3.5,
   "defaultMaxAccel": 6.0,
