--- a/build.gradle
+++ b/build.gradle
@@ -13,27 +13,37 @@ java {
 }
 
 def ROBOT_MAIN_CLASS = "org.frc5687.robot.Main"
+def TEAM_IP = "10.56.87.2"
 
 // Define my targets (RoboRIO) and artifacts (deployable files)
 // This is added by GradleRIO's backing project DeployUtils.
 deploy {
     targets {
         roborio(getTargetTypeClass('RoboRIO')) {
-            // Team number is loaded either from the .wpilib/wpilib_preferences.json
-            // or from command line. If not found an exception will be thrown.
-            // You can use getTeamOrDefault(team) instead of getTeamNumber if you
-            // want to store a team number in this file.
             team = project.frc.getTeamNumber()
             debug = project.frc.getDebugOrDefault(false)
 
             artifacts {
-                // First part is artifact name, 2nd is artifact type
-                // getTargetTypeClass is a shortcut to get the class type using a string
-
                 frcJava(getArtifactTypeClass('FRCJavaArtifact')) {
+                    project.logger.lifecycle('Checking if profile mode...')
+
+                    //Enter profile mode with ./gradlew deploy -PprofileMode
+                    if (project.hasProperty("profileMode")) {
+                        project.logger.lifecycle('Profile mode enabled!')
+                        project.logger.lifecycle("Connect JMX client to ${TEAM_IP}:1099 for RoboRIO profiling with VisualVM.")
+                        jvmArgs.add("-Dcom.sun.management.jmxremote=true")
+                        jvmArgs.add("-Dcom.sun.management.jmxremote.port=1099")
+                        jvmArgs.add("-Dcom.sun.management.jmxremote.local.only=false")
+                        jvmArgs.add("-Dcom.sun.management.jmxremote.ssl=false")
+                        jvmArgs.add("-Dcom.sun.management.jmxremote.authenticate=false")
+                        jvmArgs.add("-Djava.rmi.server.hostname=${TEAM_IP}")
+                        jvmArgs.add("-XX:MaxGCPauseMillis=5")
+                    } else {
+                        project.logger.lifecycle('Normal mode, profiling disabled.')
+                        jvmArgs.add("-XX:MaxGCPauseMillis=5")
+                    }
                 }
 
-                // Static files artifact
                 frcStaticFileDeploy(getArtifactTypeClass('FileTreeArtifact')) {
                     files = project.fileTree('src/main/deploy')
                     directory = '/home/lvuser/deploy'
@@ -42,6 +52,7 @@ deploy {
         }
     }
 }
+
 
 def deployArtifact = deploy.targets.roborio.artifacts.frcJava
 
